# Gemini-FastAPI

./: .gitignore  DEPLOYMENT.md  Dockerfile  Dockerfile.render  LICENSE  README.md  README.zh.md  fly.toml  pyproject.toml  render.yaml  run.py  vercel.json  vercel_adapter.py
.github/workflows/: docker.yaml
app/: __init__.py  main.py
app/models/: models.py
app/server/: chat.py  health.py  middleware.py
app/services/: __init__.py  client.py  lmdb.py  pool.py
app/utils/: __init__.py  config.py  helper.py  logging.py  singleton.py
config/: config.yaml
scripts/: USAGE.md  dump_lmdb.py  rotate_lmdb.py
