[project]
name = "gemini-fastapi"
version = "1.0.0"
description = "FastAPI Server built on Gemini Web API"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "fastapi>=0.115.12",
    "gemini-webapi>=1.14.0",
    "lmdb>=1.6.2",
    "loguru>=0.7.0",
    "pydantic-settings[yaml]>=2.9.1",
    "uvicorn>=0.34.1",
    "uvloop>=0.21.0; sys_platform != 'win32'",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.7",
]

[tool.ruff]
line-length = 100
lint.select = ["E", "F", "W", "I", "RUF"]
lint.ignore = ["E501"] 

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
